Backend & Frontend: - Audio generation works.